# experimental-ext-variants

./: .gitignore  README.md
.github/workflows/: comment-trigger.yml  go.yml  python.yml  status-check.yml  typescript.yml
go/sdk/: README.md  go.mod  go.sum
go/sdk/examples/server/exampletools/: tools.go
go/sdk/examples/server/github/: README.md  main.go  tools.go
go/sdk/examples/server/model-optimized/: README.md  main.go  tools.go
go/sdk/examples/server/research/: README.md  main.go  tools.go
go/sdk/examples/server/trading/: README.md  main.go  tools.go
go/sdk/examples/server/variants/: main.go
go/sdk/examples/server/variants-http/: main.go
go/sdk/examples/server/variants-stdio/: main.go
go/sdk/variants/: backend.go  context_test.go  dispatch.go  dispatch_test.go  notification_test.go  ranking.go  sending_test.go  server.go  server_test.go  session.go  types.go  variant.go
python/sdk/: README.md  pyproject.toml
python/sdk/src/mcp_ext_variants/: __init__.py  variant.py
python/sdk/tests/: __init__.py  test_variants.py
typescript/sdk/: .eslintrc.json  README.md  package.json  tsconfig.json  vitest.config.js
typescript/sdk/src/: index.ts  variants.test.ts  variants.ts
